# meson-subproject-datafile-test

./: LICENSE  main.c  meson.build
subprojects/mydep/: configuration_file.ini.in  lib.c  lib.h  meson.build
